adjust spotlight svg height to 99% to prevent overflow

--- a/weddingthingy/app/page.css
+++ b/weddingthingy/app/page.css
@@ -97,6 +97,9 @@ p {
   flex-direction: column;
   gap: 1rem;
 }
+.spotlight .card h2 {
+  text-align: center;
+}
 
 .spotlight .svg-path {
   position: absolute;
